--- a/index.html
+++ b/index.html
@@ -28,9 +28,45 @@
         <div class="item">My cart is currently empty</div>
       </div>
     </div>
-
   </div>
 </div>
+
+<img class="ui centered image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-logo.png">
+
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown  item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+      </div>
+    </div>
+    <div class="ui dropdown  item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+      </div>
+    </div>
+    <a class="item">KIDS</a>
+
+    <div class="ui dropdown  item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+      </div>
+    </div>
+    <a class="item">SEARCH</a>
+  </div>
+</div>
+
+<img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
+
 
 
     <script>
