--- a/index.html
+++ b/index.html
@@ -67,6 +67,42 @@
 
 <img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
 
+<div class="footer-background">
+  <div class="ui three column grid container">
+    <div class="column">
+      Navigation
+      <hr/>
+      <div class="ui list">
+        <div class="item">About Us</div>
+        <div class="item">Videos</div>
+        <div class="item">Store Locations</div>
+      </div>
+    </div>
+    <div class="column">
+      Main Menu
+      <hr/>
+      <div class="ui list">
+        <div class="item">Men</div>
+        <div class="item">Women</div>
+        <div class="item">Kids</div>
+      </div>
+    </div>
+    <div class="column">
+      Connect
+      <hr/>
+      <div class="ui list">
+        <div class="item">Sign up for the latest updates</div>
+        <div class="ui labeled input">
+            <input type="text" placeholder="Enter Email Address">
+          <div class="ui black label">
+            Join
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
     <script>
